# task-manager

./: .env.example  README.md  azure-pipelines.yml  docker-compose.yml
web_app/: .dockerignore  .env.example  .flaskenv  Dockerfile  pyproject.toml  requirements.txt  run-local.sh  run-prod.sh
web_app/migrations/versions/: 03d419899c71_initial_migration.py  b4629f6088d8_create_auth_tables.py  d192f46c680c_initial_migration.py
web_app/src/app/: __init__.py  comands.py  config.py  decorators.py  errors.py  extensions.py  forms.py
web_app/src/app/auth/: constants.py  decorators.py  forms.py  helpers.py  routes.py  schemas.py  services.py  views.py
web_app/src/app/common/: error_handlers.py  exceptions.py  helpers.py
web_app/src/app/helpers/: auth.py
web_app/src/app/models/: auth.py  task.py
web_app/src/app/routes/: auth.py  errors.py  tasks.py  tasks_api.py  tasks_web.py  web.py
web_app/src/app/schemas/: auth.py  tasks.py
web_app/src/app/services/: auth_services.py  tasks_services.py
web_app/src/app/tasks/: forms.py  models.py  routes.py  schemas.py  services.py  views.py
web_app/src/app/templates/: _alerts.html  _footer.html  _nav.html  base.html  tasks.html.old
web_app/src/app/templates/auth/: logged_out.html  login.html  register.html
web_app/src/app/templates/tasks/: create.html  list.html
